Correction de bug